--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Don't expose this to the client, this is just an example
 VITE_HAPPYROBOT_API_KEY=
-VITE_HAPPYROBOT_URL=https://platform.happyrobot.ai
+VITE_HAPPYROBOT_URL=https://v2.platform.happyrobot.ai
